--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  a:hover {
+    @apply underline;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-heading my-6 font-bold;
+  }
+
+  h1 {
+    @apply text-4xl;
+  }
+
+  h3 {
+    @apply text-2xl;
+  }
+  
+  h4 {
+    @apply text-xl;
+  }
+  
+  h5 {
+    @apply text-lg;
+  }
+
+  ul, ol {
+    @apply my-4;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  ol {
+    list-style-type: decimal;
+  }
+
+  li {
+    @apply my-2;
+  }
+
+  p {
+    @apply my-2;
+  }
+
+}
+
 @layer components {
   .btn {
-    @apply bg-green-500 tracking-wider w-full text-sm text-center text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-sm hover:bg-green-600 transition-colors flex justify-center pt-3 pb-2
+    @apply hover:no-underline bg-green-500 tracking-wider w-full text-sm text-center text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-sm hover:bg-green-600 transition-colors flex justify-center pt-3 pb-2
   }
 }
